@@ -26,7 +26,7 @@ Forum / Wiki:
 IRC channel:
 
 Upstream contact:
-  Author:
+  Maintainer:
   Bugs:
 
 License:
